Avoid overflow of gallery images (#79)
* fix cover images

* fix images cover

--- a/components/tools/toolPage/ToolGallery/ToolGallery.module.css
+++ b/components/tools/toolPage/ToolGallery/ToolGallery.module.css
@@ -1,7 +1,29 @@
 .galleryWrapper {
-    margin: 30px 0;
+    position: relative;
+    width: 100%;
+    overflow: hidden;
+}
+
+.splide__slide {
+    position: relative;
+    width: 100%;
+    height: 100%; /* Ensure the slide has a valid height */
+    overflow: hidden;
+}
+
+.splideSlide {
+    position: relative;
+    width: 100%;
+    height: 0;
+    padding-bottom: 56.25%; /* 16:9 aspect ratio */
+    overflow: hidden;
 }
 
 .screenshot {
-    border-radius: 6px;
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
 }
